--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -36,13 +36,23 @@
 .gpt3__navbar-links_container p,
 .gpt3__navbar-sign p,
 .gpt3__navbar-menu_container p {
-    color: #fff;
+    color: rgb(5, 39, 72);
     font-family: var(--font-family);
-    font-weight: 500;
+    font-weight: 600;
     font-size: 18px;
     line-height: 25px;
     text-transform: capitalize;
+    margin: 0 1rem;
+    cursor: pointer;
+}
 
+.gpt3__navbar-links_logo h1 {
+    color: rgb(5, 39, 72);
+    font-family: var(--font-family);
+    font-weight: 900;
+    font-size: 30px;
+    line-height: 25px;
+    text-transform: capitalize;
     margin: 0 1rem;
     cursor: pointer;
 }
@@ -78,7 +88,7 @@
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
-    
+
     text-align: end;
     background: var(--color-footer);
     padding: 2rem;
@@ -88,7 +98,7 @@
     margin-top: 1rem;
     min-width: 210px;
     border-radius: 5px;
-    box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
 .gpt3__navbar-menu_container p {
