--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,6 +1,12 @@
 .gpt3__header {
     display: flex;
     flex-direction: row;
+    background-image: url('../../assets/door.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 100%;
+    height: 650px;
 }
 
 .gpt3__header-content {
@@ -133,7 +139,7 @@
         font-size: 16px;
         line-height: 24px;
     }
-    
+
     .gpt3__header-content__people {
         flex-direction: column;
     }
