--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,22 @@ a {
 }
 
 .gradient__bg {
-  background: radial-gradient(circle at 3% 25%, rgb(116 233 255) 0%, rgb(178 232 247) 25%)
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+  scroll-snap-type: mandatory;
+  scroll-snap-points-y: repeat(100vh);
+  scroll-snap-type: y mandatory;
+}
+
+.gradient__bg__after {
+  max-width: 1300px; 
+  padding: 0 20px; 
+  width: 100%;
+  margin: auto;
 }
 
 .gradient__text {
-  background: var(--gradient-text);
+  background: white;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
