--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -16,6 +16,7 @@
     flex: 1;
     max-width: 180px;
     margin-right: 2rem;
+    color: black;
 }
 
 .gpt3__features-container__feature-title h1 {
