--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@
 :root {
   --font-family: 'Manrope', sans-serif;
 
-  --gradient-text: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
-  --gradient-bar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
+  --gradient-text: linear-gradient(rgba(255, 255, 255, 0.7) 1.84%, rgba(255, 255, 255, 0) 102.67%);
+  /* --gradient-text: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
+  --gradient-bar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%); */
   
   --color-bg: #040C18;
   --color-footer : #031B34;
