--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -1,169 +1,51 @@
 .gpt3__features {
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-}
-
-.animated {
-    visibility: visible;
-    
-    -webkit-animation-fill-mode: both;
-    -moz-animation-fill-mode: both;
-    -ms-animation-fill-mode: both;
-    -o-animation-fill-mode: both;
-    animation-fill-mode: both;
-    
-    -webkit-animation-duration: 1s;
-    -moz-animation-duration: 1s;
-    -ms-animation-duration: 1s;
-    -o-animation-duration: 1s;
-    animation-duration: 1s;
-  
-    -webkit-animation-play-state: running;
-    -moz-animation-play-state: running;
-    -ms-animation-play-state: running;
-    -o-animation-play-state: running;
-    animation-play-state: running;
-  }
-
-  @-webkit-keyframes bounceInRight {
-	0% {
-		opacity: 0;
-		-webkit-transform: translateX(2000px);
-	}
-
-	60% {
-		-webkit-transform: translateX(-20px);
-	}
-
-	80% {
-		-webkit-transform: translateX(5px);
-	}
-
-	100% {
-		opacity: 1;
-		-webkit-transform: translateX(0);
-	}
-}
-
-@-moz-keyframes bounceInRight {
-	0% {
-		opacity: 0;
-		-moz-transform: translateX(2000px);
-	}
-
-	60% {
-		-moz-transform: translateX(-20px);
-	}
-
-	80% {
-		-moz-transform: translateX(5px);
-	}
-
-	100% {
-		opacity: 1;
-		-moz-transform: translateX(0);
-	}
-}
-
-@-o-keyframes bounceInRight {
-	0% {
-		opacity: 0;
-		-o-transform: translateX(2000px);
-	}
-
-	60% {
-		-o-transform: translateX(-20px);
-	}
-
-	80% {
-		-o-transform: translateX(5px);
-	}
-
-	100% {
-		opacity: 1;
-		-o-transform: translateX(0);
-	}
-}
-
-@keyframes bounceInRight {
-	0% {
-		opacity: 0;
-		transform: translateX(2000px);
-	}
-
-	60% {
-		transform: translateX(-20px);
-	}
-
-	80% {
-		transform: translateX(5px);
-	}
-
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-
-.animated.bounceInRight {
-    -webkit-animation-name: bounceInRight;
-    -moz-animation-name: bounceInRight;
-    -o-animation-name: bounceInRight;
-    animation-name: bounceInRight;
-  }
-
-.gpt3__features-heading {
-    flex: 1;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
     flex-direction: column;
-
-    text-align: left;
-    margin-right: 5rem;
-}
-
-.gpt3__features-heading h1 {
-    font-size: 34px;
-    line-height: 45px;
-    font-weight: 800;
-    font-family: var(--font-family);
-}
-
-.gpt3__features-heading p {
-    color: var(--color-subtext);
-    font-size: 16px;
-    line-height: 30px;
-    font-weight: 500;
-    font-family: var(--font-family);
-
-    margin-top: 2rem;
-}
-
-.gpt3__features-container {
-    flex: 1.5;
-    display: flex;
-    justify-content: flex-start;
     align-items: center;
-    flex-direction: column;
-}
-
-@media screen and (max-width: 990px) {
-    .gpt3__features {
-        flex-direction: column;
+    padding: 50px 0;
+    text-align: center;
+  }
+  
+  /* Heading style */
+  .gpt3__features-heading {
+    margin-bottom: 30px;
+  }
+  
+  .gradient__text {
+    font-family: var(--font-family);
+    font-size: 36px;
+    font-weight: bold;
+    background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  
+  /* Individual feature container */
+  .gpt3__feature {
+    background-color: #fff;
+    border: 1px solid var(--tertiary-color);
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
+    transition: all 0.3s ease;
+    width: 80%;
+    max-width: 600px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Animation for individual feature */
+  .animated {
+    animation: fadeUp 0.8s ease both;
+  }
+  
+  @keyframes fadeUp {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
     }
-
-    .gpt3__features-heading {
-        margin: 0 0 2rem 0;
+    100% {
+      opacity: 1;
+      transform: translateY(0);
     }
-}
-
-
-@media screen and (max-width: 550px) {
-    .gpt3__features-heading h1 {
-        font-size: 28px;
-        line-height: 38px;
-    }
-}
+  }
