--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -14,8 +14,13 @@
     margin-bottom: 3rem;
 }
 
+.logo-cinco-footer {
+    width: 200px !important;
+    height: 150px !important;
+}
+
 .gpt3__footer-heading h1 {
-    font-family: var(--font-family);
+    font-family: 'Dosis', sans-serif;
     font-weight: 800;
     font-size: 64px;
     line-height: 75px;
@@ -27,7 +32,7 @@
     align-items: center;
 
     padding: 1rem;
-    border: 1px solid #fff;
+    border: 1px solid black;
     text-align: center;
 
     margin-bottom: 10rem;
@@ -36,9 +41,9 @@
 
 .gpt3__footer-btn p {
     font-size: 18px;
-    font-family: var(--font-family);
+    font-family: 'Dosis', sans-serif;
     line-height: 21px;
-    color: #fff;
+    color: black;
     word-spacing: 2px;
 }
 
@@ -51,6 +56,17 @@
 
     width: 100%;
     text-align: left;
+}
+
+.gpt3__footer-links h4 {
+    font-family: 'Dosis', sans-serif;
+    font-size: 17px;
+    letter-spacing: 0.08em;
+    font-weight: 900;
+    line-height: 22px;
+    color: black;
+
+    margin-bottom: 0.9rem;
 }
 
 .gpt3__footer-links div {
@@ -71,10 +87,12 @@
 }
 
 .gpt3__footer-links_logo p {
-    font-family: var(--font-family);
-    font-size: 12px;
-    line-height: 15px;
-    color: #fff;
+    font-family: 'Dosis', sans-serif;
+    font-size: 17px;
+    letter-spacing: 0.08em;
+    font-weight: 900;
+    line-height: 22px;
+    color: black;
 }
 
 .gpt3__footer-links_div {
@@ -84,19 +102,22 @@
 }
 
 .gpt3__footer-links_div h4 {
-    font-size: 14px;
-    line-height: 17px;
-    font-family: var(--font-family);
-    color: #fff;
+    font-family: 'Dosis', sans-serif;
+    font-size: 17px;
+    letter-spacing: 0.08em;
+    font-weight: 900;
+    line-height: 22px;
+    color: black;
 
     margin-bottom: 0.9rem;
 }
 
 .gpt3__footer-links_div p {
-    font-size: 12px;
-    line-height: 15px;
-    font-family: var(--font-family);
-    color: #fff;
+    font-family: 'Dosis', sans-serif;
+    font-size: 17px;
+    letter-spacing: 0.08em;
+    line-height: 22px;
+    color: black;
 
     margin: 0.5rem 0;
     cursor: pointer;
@@ -109,10 +130,11 @@
 }
 
 .gpt3__footer-copyright p {
-    font-size: 12px;
-    font-family: var(--font-family);
-    line-height: 15px;
-    color: #fff;
+    font-family: 'Dosis', sans-serif;
+    font-size: 15px;
+    letter-spacing: 0.08em;
+    line-height: 22px;
+    color: black;
 }
 
 @media screen and (max-width: 850px) {
