--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -5,57 +5,75 @@
     background-repeat: no-repeat;
     background-position: center center;
     width: 100%;
-    height: 650px;
 }
 
 .img-thumbnail-1 {
-    width: 100%;
-    height: auto;
+    /* height: auto;
     transform: translate(-50%, -50%);
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: -1; 
+    z-index: -1;  */
+    width: 100%;
+    height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
+}
+
+.fixed-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1; /* Moves the image to the background */
+    object-fit: cover; /* Maintain aspect ratio, cover container */
+    width: 100%; /* Occupy full width of the container */
+    height: 100%;
 }
 
 .img-content-1 {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #fff;
-    z-index: 1;
+    top: 50%; /* Align to the center */
+    left: 50%; /* Align to the center */
+    transform: translate(-50%, -50%); /* Center the image */
+    max-width: 100%; /* Adjust maximum width */
+    max-height: 100%; /* Adjust maximum height */
+    width: auto; /* Adjust width */
+    height: auto;
 }
 
 .gpt3__header-content {
     flex: 1;
+    text-align: center;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
-
-    margin-right: 5rem;
 }
 
 .gpt3__header-content h1 {
     font-family: var(--font-family);
-    text-shadow: 2px 2px 4px rgba(238, 239, 238, 0.5);
+    text-shadow: 1px 1px 1px black;
     font-weight: 800;
-    font-size: 62px;
+    font-size: 3em;
     line-height: 75px;
-    letter-spacing: -0.04em;
+    letter-spacing: 10px;
+    font-family: 'Dosis', sans-serif;
+    text-transform: uppercase;
 }
 
 .gpt3__header-content p {
     font-family: var(--font-family);
     font-weight: 900;
-    font-size: 20px;
-    line-height: 28px;
-    color: white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-size: 1.6em;
+    line-height: 41px;
+    color: black;
+    text-shadow: 2px 2px 4px rgb(9 9 9 / 50%);
     margin-top: 1.5rem;
+    letter-spacing: 2px;
+    font-family: 'Dosis', sans-serif;
+    max-width: 650px;
 }
 
 .gpt3__header-content__input {
@@ -144,7 +162,7 @@
     width: 100%;
     height: auto;
     position: relative;
-    height: 500px;
+    height: 100vh;
 }
 
 @media screen and (max-width: 1050px) {
