--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -1,6 +1,7 @@
 .gpt3__blog {
     display: flex;
     flex-direction: column;    
+    padding: 10rem 2rem;
 }
 
 .gpt3__blog-heading {
@@ -50,11 +51,6 @@
 }
 
 @media screen and (max-width: 990px) {
-    .gpt3__blog-container {
-        flex-direction: column-reverse;
-    }
-
-
     .gpt3__blog-container_groupA {
         margin: 2rem 0;
     }
