--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -8,6 +8,11 @@
     margin: 1rem;
 }
 
+.gpt3__features-container__feature:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(236, 103, 103, 0.15);
+  }
+
 .gpt3__features-container__feature-title {
     flex: 1;
     max-width: 180px;
