--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     
-    padding: 2rem;
+    padding: 10rem 2rem;
 
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
@@ -88,34 +88,6 @@
     margin-top: 0.5rem;
 }
 
-.logo-cinco {
-    border-radius: 50px;
-    padding: 20px;
-    width: inherit; 
-    height: auto;
-    flex: 0 0 auto; 
-    margin-right: 20px;
-    animation: beatAnimation 1s infinite alternate;
-}
-
-.logo-cinco:hover {
-    animation-play-state: paused;
-}
-
-
-.logo-container,
-.text-container {
-    flex: 0 0 50%; /* Each takes 50% width */
-}
-@keyframes beatAnimation {
-    0% {
-        transform: scale(1); /* Initial scale */
-    }
-    100% {
-        transform: scale(1.1); /* Slightly larger scale */
-    }
-}
-
 @media screen and (max-width: 850px) {
     .gpt3__whatgpt3-heading {
         flex-direction: column;
@@ -131,15 +103,6 @@
 @media (max-width: 768px) {
     .gpt3__whatgpt3-feature {
         flex-direction: column; 
-    }
-
-    .logo-container,
-    .text-container {
-        flex: 1; 
-    }
-
-    .logo-container {
-        order: -1; 
     }
 }
 
