--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -1,16 +1,15 @@
 .gpt3__blog {
     display: flex;
     flex-direction: column;    
-    padding: 10rem 2rem;
+    padding: 5rem 2rem;
 }
 
 .gpt3__features {
     display: flex;
     flex-direction: column;    
-    padding: 10rem 2rem;
+    padding: 5rem 2rem;
     margin: auto;
     max-width: 1200px;
-    margin-bottom: 20rem;
 }
 
 .gpt3__blog-heading {
@@ -51,7 +50,7 @@
     flex-direction: column;
     margin: auto;
     max-width: 1200px;
-    margin-bottom: 20rem;
+    margin-bottom: 13rem;
 }
 
 .gpt3__features-container {
@@ -59,7 +58,6 @@
     flex-direction: column;
     margin: auto;
     max-width: 1200px;
-    margin-bottom: 20rem;
 }
 
 
@@ -82,6 +80,8 @@
 .gpt3__blog-container_groupB {
     flex: 1;
     display: flex;
+    margin: auto;
+    justify-content: center;
 }
 
 .gpt3__features-container_groupA {
@@ -131,9 +131,9 @@
     }
 }
 
-@media screen and (max-width: 550px) {
-    .gpt3__blog-heading h1 {
-        font-size: 34px;
-        line-height: 42px;
+@media screen and (max-width: 650px) {
+    .gpt3__features-heading h1 {
+        font-size: 20px;
+        line-height: 40px;
     }
 }
