--- a/src/components/value/value.css
+++ b/src/components/value/value.css
@@ -48,3 +48,22 @@
     transform: translateY(-5px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
   }
+
+  @media screen and (max-width: 990px) {
+    .gpt3__features-container__featureV {
+        display: flex;
+        flex-wrap: wrap;
+        width: 50%;
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .gpt3__blog-container_groupB {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .gpt3__features-container__featureV  {
+       width: 100%;
+    }
+}
