--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -53,7 +53,7 @@
     align-items: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
-
+    max-width: 1200px;
     width: 100%;
     text-align: left;
 }
@@ -125,6 +125,7 @@
 
 .gpt3__footer-copyright {
     margin-top: 2rem;
+    margin-bottom: 2rem;
     text-align: center;
     width: 100%;
 }
