--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -24,12 +24,12 @@
 
 .fixed-image {
     position: fixed;
-    top: 0;
+    top: -56px;
     left: 0;
-    z-index: -1; /* Moves the image to the background */
-    object-fit: cover; /* Maintain aspect ratio, cover container */
-    width: 100%; /* Occupy full width of the container */
-    height: 100%;
+    z-index: -1;
+    object-fit: cover;
+    width: 100%;
+    height: calc(100% + 56px);
 }
 
 .img-content-1 {
