--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -15,8 +15,20 @@
 }
 
 .logo-cinco-footer {
-    width: 200px !important;
-    height: 150px !important;
+    width: 70px !important;
+    height: 50px !important;
+}
+
+.luotettava-footer {
+    width: 230px !important;
+    height: 100px !important;
+}
+
+.logo_company {
+    display: flex;
+    flex-direction: row;
+    margin: 0 !important;
+    align-items: center;
 }
 
 .gpt3__footer-heading h1 {
@@ -61,6 +73,16 @@
 .gpt3__footer-links h4 {
     font-family: 'Dosis', sans-serif;
     font-size: 17px;
+    letter-spacing: 0.08em;
+    font-weight: 900;
+    line-height: 22px;
+    color: black;
+
+    margin-bottom: 0.9rem;
+}
+
+.gpt3__footer-links h2 {
+    font-family: 'Dosis', sans-serif;
     letter-spacing: 0.08em;
     font-weight: 900;
     line-height: 22px;
