--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -15,19 +15,18 @@
 
 .gpt3__features-container__feature-title {
     flex: 1;
-    max-width: 180px;
     margin-right: 2rem;
     color: black;
     margin-top: 15px;
 }
 
 .gpt3__features-container__feature-title h1 {
-    font-family: var(--font-family);
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: -0.04em;
-    color: black;
+    font-size: 34px;
+    line-height: 45px;
+    font-weight: bold;
+    font-family: 'Dosis', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
 }
 
 /* .gpt3__features-container__feature-title div {
@@ -40,15 +39,14 @@
 
 .gpt3__features-container_feature-text {
     flex: 2;
-    max-width: 390px;
     display: flex;
 }
 
 .gpt3__features-container_feature-text p {
     font-family: var(--font-family);
     font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 20px;
+    line-height: 37px;
     color: black;
 }
 
