--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -15,8 +15,11 @@
 
 .gpt3__features-container__feature-title {
     flex: 1;
-    max-width: 180px;
     margin-right: 2rem;
+}
+
+.gpt3__features-container__feature-title-text {
+    margin-left: 20px;
 }
 
 .gpt3__features-container__feature-title h1 {
@@ -28,18 +31,22 @@
     color: black;
 }
 
+.gpt3__features-container__feature-title-text p {
+    font-family: var(--font-family);
+    text-align: left;
+    font-size: 1.3rem;
+    line-height: 43px;
+    letter-spacing: -0.04em;
+    color: black;
+    margin-top: 4%;
+}
+
 .gpt3__features-container__feature-title div {
     width: 38px;
     height: 3px;
     background: var(--gradient-bar);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 0.25rem;
-}
-
-.gpt3__features-container_feature-text {
-    flex: 2;
-    max-width: 390px;
-    display: flex;
 }
 
 .gpt3__features-container_feature-text p {
@@ -55,6 +62,11 @@
     .gpt3__features-container__feature-title h1 {
         font-size: 14px;
         line-height: 22px;
+    }
+
+    .gpt3__features-container__feature-title-text p {
+        font-size: 12px;
+        line-height: 20px;
     }
 
     .gpt3__features-container_feature-text p {
