--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -60,7 +60,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-
+    align-content: center;
     margin-top: 2rem;
 }
 
@@ -68,7 +68,7 @@
 .gpt3__whatgpt3-container .gpt3__features-container__feature {
     flex: 1;
     margin: 1rem;
-    min-width: 210px;
+    min-width: 300px;
     background-color: #F4CCCC;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -120,8 +120,10 @@
     }
 
     .gpt3__whatgpt3-heading h1 {
-        font-size: 20px;
+        font-size: 2rem;
         line-height: 40px;
+        margin: auto;
+        margin-bottom: 60px;
     }
 }
 
