--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -35,6 +35,7 @@
 }
 
 .gpt3__features-heading h1 {
+    text-align: left;
     font-size: 34px;
     line-height: 45px;
     font-weight: bold;
@@ -133,7 +134,7 @@
 
 @media screen and (max-width: 650px) {
     .gpt3__features-heading h1 {
-        font-size: 20px;
         line-height: 40px;
+        text-align: center;
     }
 }
