--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -52,7 +52,7 @@
 
 @media screen and (max-width: 550px) {
     .gpt3__features-container__feature-title h1 {
-        font-size: 14px;
+        font-size: 1.4rem;
         line-height: 22px;
     }
 
