--- a/src/containers/form/form.css
+++ b/src/containers/form/form.css
@@ -26,6 +26,7 @@ form {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 10px;
+  margin-bottom: 4rem;
 }
 
   label {
