--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,10 @@ a {
   -webkit-text-fill-color: transparent;
 }
 
+.section__padding {
+  padding: 4rem 6rem;
+}
+
 .section__margin {
   margin: auto;
   max-width: 1200px;
