--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -105,7 +105,6 @@
 }
 
 @media screen and (max-width: 702px) {
-    /* Customizing feature component as per needs */
     .gpt3__whatgpt3-container .gpt3__features-container__feature {
         flex-direction: column;
     }
@@ -114,7 +113,6 @@
         flex-direction: column;
     }
 
-    /* Customizing feature component as per needs */
     .gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
         margin-top: 0.5rem;
     }
@@ -127,9 +125,8 @@
     }
 }
 
-@media screen and (max-width: 350px) {
-    /* Customizing feature component as per needs */
+/* @media screen and (max-width: px) {
     .gpt3__whatgpt3-container .gpt3__features-container__feature {
         margin: 1rem 0;
     }
-}
+} */
