--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -209,3 +209,9 @@
         line-height: 16px;
     }
 }
+
+@media screen and (max-width: 319px) {
+    .gpt3__header-content h1 {
+        margin-top: 132px;
+    }
+}
