--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -60,13 +60,13 @@
 
 @media screen and (max-width: 550px) {
     .gpt3__features-container__feature-title h1 {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         line-height: 22px;
         margin-bottom: 50px;
     }
 
     .gpt3__features-container__feature-title-text p {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         line-height: 27px;
     }
 
@@ -77,5 +77,9 @@
 
     .gpt3__features-container__feature {
         margin: 1rem 0;
+    }
+
+    .gpt3__features-container__feature-title-text {
+        margin-left: 0px;
     }
 }
