--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -59,6 +59,16 @@
     word-spacing: 2px;
 }
 
+.custom-link {
+    margin-top: 15px;
+    font-size: 18px;
+    font-family: 'Dosis', sans-serif;
+    line-height: 21px;
+    color: blue;
+    word-spacing: 2px;
+    text-decoration: underline;
+}
+
 .gpt3__footer-links {
     display: flex;
     justify-content: space-between;
