--- a/src/containers/operations/Operations.css
+++ b/src/containers/operations/Operations.css
@@ -60,15 +60,16 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    align-content: center;
+
     margin-top: 2rem;
 }
 
 /* Customizing feature component as per needs */
 .gpt3__whatgpt3-container .gpt3__features-container__feature {
+    width: 100%;
     flex: 1;
     margin: 1rem;
-    min-width: 300px;
+    min-width: 210px;
     background-color: #F4CCCC;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -104,7 +105,8 @@
     }
 }
 
-@media screen and (max-width: 702px) {
+@media screen and (max-width: 650px) {
+    /* Customizing feature component as per needs */
     .gpt3__whatgpt3-container .gpt3__features-container__feature {
         flex-direction: column;
     }
@@ -113,20 +115,21 @@
         flex-direction: column;
     }
 
+    /* Customizing feature component as per needs */
     .gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
         margin-top: 0.5rem;
     }
 
     .gpt3__whatgpt3-heading h1 {
-        font-size: 2rem;
+        font-size: 20px;
         line-height: 40px;
-        margin: auto;
-        margin-bottom: 60px;
     }
 }
 
-/* @media screen and (max-width: px) {
+@media screen and (max-width: 350px) {
+    /* Customizing feature component as per needs */
     .gpt3__whatgpt3-container .gpt3__features-container__feature {
         margin: 1rem 0;
+        min-width: 100%;
     }
-} */
+}
